[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oura-dash"
version = "0.1.0"
description = "Personal Oura Ring daily-metrics dashboard and window benchmark"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "pandas>=2.2",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "streamlit>=1.36",
  "plotly>=5.22",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5", "mypy>=1.10", "pandas-stubs"]

[project.scripts]
oura-dash = "oura_dash.cli:app"

[tool.setuptools.packages.find]
include = ["oura_dash*"]

[tool.pytest.ini_options]
markers = ["integration: hits the live Oura sandbox over the network (opt-in)"]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
